--- a/public/css/style.css
+++ b/public/css/style.css
@@ -13,6 +13,17 @@
     background-image: url("../images/hero.jpg");
 }
 
+#map {
+    height: 400px !important;
+    width: 100% !important;
+    z-index: 10;
+}
+
+#applicant-form {
+    position: relative;
+    z-index: 11;
+}
+
 [x-cloak] {
     display: none !important;
 }
